--- a/src/widgets/CatFact/index.module.css
+++ b/src/widgets/CatFact/index.module.css
@@ -1,18 +1,9 @@
-@media screen and (max-width: 420px) {
-	.group {
-		flex-direction: column;
-	}
-
-	.button {
-		align-self: flex-end !important;
-	}
-}
-
 .group {
+	flex-direction: column;
+	padding: 24px 16px !important;
+	margin-top: 8px;
 	display: flex;
 	gap: 8px;
-	padding: 24px 16px !important;
-	margin-top: 8px
 }
 
 .inputWrapper {
@@ -26,8 +17,13 @@
 .button {
 	flex: 0;
 	align-self: flex-start;
+	align-self: flex-end !important;
+}
+.button span {
+	text-overflow: clip;
+}
 
-	span {
-		text-overflow: clip;
-	}
+.errorMessage {
+	color: rgba(255, 0, 0, 0.75);
+	font-style: italic;
 }
